# e-scatter

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  boil.ini
data/: SEMmaterials.xml  line-1um.pri  line-1um.tri  pmma.mat  pri-gen.py  reels.tri  silicon-kieft.mat  silicon.mat  teels.tri  yield.m  yield.pmma.det  yield.pri  yield.silicon.det  yield.tri  yield_pri.m
data/materials/copper/: definition.py
data/materials/pmma/: definition.py  definition_kieft.py
data/materials/silicon/: definition.py
data/materials/silicondioxide/: definition.py  silicondioxide.json
data/materials/siliconnitride/: definition.py
doc/extra/: curved-trajectories.lyx  electron-collision.lyx  library.bib  notes.tex  phonon-scattering.lyx  refraction-transmission.lyx
scripts/: benchmark.py  constants.py  cs.py  eels.py  elsepa  elsepa-parse.py  endf-parse.py  inelastic-gen.py  kieftbosch_to_inelastic_dcs.m  make-mat.old.py  make-mat.py  metro.py  output-to-img.py  phonon-gen.py  pri-gen.py  run-elsepa.py  sampleviewer.py  silicon.json  stream2img.py
scripts/cslib/: __init__.py  dataframe.py  noodles.py  numeric.py  predicates.py  settings.py  units.py
scripts/cstool/: parse_input.py  phonon.py
scripts/elsepa/: __init__.py  executable.py  generate_input.py  parse_output.py  predicates.py  settings.py
scripts/exposure/: pri-gen.py
scripts/old.cs/: inelastic-gen.py  make-mat.py  phonon-gen.py
scripts/sampleviewer/: __init__.py  fragment.glsl  geometry.py  sampleviewerwidget.py  sampleviewerwindow.py  vertex.glsl
scripts/triangles/: stream.py
src/: CMakeLists.txt  cuda_make_ptr.cuh  cuda_make_ptr.cuinc  cuda_mem_scope.cuh  cuda_mem_scope.cuinc  cuda_safe_call.cu  cuda_safe_call.cuh  interpolate.cc  interpolate.h  xml.cc  xml.h
src/cdsem/: CMakeLists.txt  cdsem.cu  cuda_geometry_struct.cu  cuda_geometry_struct.cuh  cuda_kernels.cu  cuda_kernels.cuh  cuda_material_struct.cu  cuda_material_struct.cuh  cuda_particle_struct.cu  cuda_particle_struct.cuh  geometry_struct.cu  geometry_struct.cuh  index3.h  index3.hh  kernels.cu  kernels.cuh  main.cu  material.cc  material.h  material.hh  material.inc  material_struct.cu  material_struct.cuh  octree.cc  octree.hh  particle_struct.cu  particle_struct.cuh  point3.cc  point3.h  point3.hh  tri_box_overlap.cc  tri_box_overlap.h  triangle.cc  triangle.hh  tribox.cc  tribox.h  tribox.hh  trigrid.cc  trigrid.h  trigrid.hh  (+5 more)
src/common/: CMakeLists.txt  archive.cc  archive.h  archive.hh  argparse.hh  colours.cc  command.hh  constant.h  constant.hh  cuda_make_ptr.cuh  cuda_make_ptr.cuinc  cuda_mem_scope.cuh  cuda_mem_scope.cuinc  cuda_safe_call.cu  cuda_vec3_math.cuh  cuda_vec3_math.cuinc  fancy_string.hh  global.hh  interpolate.cc  interpolate.h  interpolate.hh  list_commands.cc  long_string.hh  material.cc  material.cc.orig  material.hh  material.inc  optional.cc  optional.h  optional.hh  optional.inl  parser.cc  polynomial.cc  polynomial.h  polynomial.hh  profile_scope.cc  profile_scope.hh  spline.cc  spline.h  spline.hh  (+3 more)
src/compile-mat/: CMakeLists.txt  main.cc  parser.cc  parser.hh
src/cpl/: mathexpr.cc  mathexpr.h  optional.h  optional.inl  parser.cc  parser.h  random.h  random.inl  text.cc  text.h  text.inl  triangle.cc  triangle.h  triangle.inl  vector3.cc  vector3.h  vector3.inl  xml.cc  xml.h  xml.inl
src/cstool/: CMakeLists.txt  compile-mat.cc  cross-section.cc  cross-section.hh  main.cc  plot-mat.cc
src/cuda_common/: CMakeLists.txt  cuda_make_ptr.cuh  cuda_mem_scope.cuh  cuda_mem_scope.cuinc  cuda_safe_call.cu  cuda_safe_call.cuh  cuda_vec3_math.cuh  cuda_vec3_math.cuinc
src/edge-detect/: CMakeLists.txt  float_image.cc  float_image.h  gauss2_model.cc  gauss2_model.h  main.cc  matrix.cc  matrix.h  nelder_mead.h  nelder_mead.inl
src/line-gen/: CMakeLists.txt  main.cc  vertex_grid.cc  vertex_grid.h
src/pagdiff/: CMakeLists.txt  main.cu
src/plot-mat/: CMakeLists.txt  main.cc
src/sample-viewer/: CMakeLists.txt  camera.h  control.h  main.cc  sample_viewer.cc  sample_viewer.h  shader.fragment  shader.h  shader.vertex
src/stream2pgm/: CMakeLists.txt  main.cc
src/viewer/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  main.cc
