add_subdirectory(common)
add_subdirectory(cuda_common)
add_subdirectory(cdsem)
add_subdirectory(pagdiff)
add_subdirectory(stream2pgm)
add_subdirectory(viewer)

if(WITH_UTILS)
	add_subdirectory(compile-mat)
	add_subdirectory(cstool)
	add_subdirectory(edge-detect)
	add_subdirectory(line-gen)
	add_subdirectory(sample-viewer)
	add_subdirectory(plot-mat)
endif(WITH_UTILS)
