add_subdirectory(common)
add_subdirectory(cuda_common)
add_subdirectory(cdsem)
add_subdirectory(pagdiff)
add_subdirectory(stream2pgm)
add_subdirectory(viewer)
add_subdirectory(cstool)
if(WITH_UTILS)
	add_subdirectory(edge-detect)
	add_subdirectory(line-gen)
	add_subdirectory(sample-viewer)
endif(WITH_UTILS)
