add_subdirectory(common)
add_subdirectory(cuda_common)
add_subdirectory(cdsem)
add_subdirectory(pagdiff)
add_subdirectory(stream2pgm)
add_subdirectory(viewer)
if(WITH_UTILS)
	add_subdirectory(edge-detect)
	add_subdirectory(line-gen)
endif(WITH_UTILS)
if(WITH_CSTOOL)
	add_subdirectory(cstool)
endif(WITH_CSTOOL)
