project(e-scatter/cdsem)
list(APPEND SOURCE_FILES point3.cc)
list(APPEND SOURCE_FILES material.cc)
list(APPEND SOURCE_FILES tribox.cc)
list(APPEND SOURCE_FILES octree.cc)
list(APPEND SOURCE_FILES cuda_geometry_struct.cu)
list(APPEND SOURCE_FILES cuda_material_struct.cu)
list(APPEND SOURCE_FILES cuda_particle_struct.cu)
list(APPEND SOURCE_FILES cuda_kernels.cu)
cuda_add_executable(cdsem main.cu ${SOURCE_FILES})
target_link_libraries(cdsem common)