project(e-scatter/cdsem)
find_package(Boost COMPONENTS program_options)
#include(FindPkgConfig)
#pkg_search_module(CUB cub REQUIRED)
list(APPEND SOURCE_FILES point3.cc)
list(APPEND SOURCE_FILES triangle.cc)
list(APPEND SOURCE_FILES tribox.cc)
list(APPEND SOURCE_FILES octree.cc)
list(APPEND SOURCE_FILES cuda_geometry_struct.cu)
list(APPEND SOURCE_FILES cuda_material_struct.cu)
list(APPEND SOURCE_FILES cuda_particle_struct.cu)
list(APPEND SOURCE_FILES cuda_kernels.cu)
include_directories(${Boost_INCLUDE_DIRS} ${CUB_INCLUDE_DIRS})
add_executable(cdsem main.cu ${SOURCE_FILES})
target_link_libraries(cdsem common cuda_common ${Boost_LIBRARIES} ${CUB_LIBRARIES})
