project(e-scatter/sample-viewer)
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
include_directories(${GLEW_INCLUDE_DIRS})
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${OPENGL_INCLUDE_DIR})
add_executable(sample-viewer main.cc sample_viewer.cc)
target_link_libraries(sample-viewer common ${GLEW_LIBRARIES} ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})
